<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.designpatterns.ui.main.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitEnd"
        android:src="@drawable/bottom_lines"
        tools:ignore="ContentDescription" />

    <com.designpatterns.item.CategoryItem
        android:id="@+id/creationalCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:description="@string/category_creational_description"
        app:title="@string/category_creational_title" />

    <com.designpatterns.item.CategoryItem
        android:id="@+id/structuralCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/creationalCategory"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:description="@string/category_structural_description"
        app:title="@string/category_structural_title" />

    <com.designpatterns.item.CategoryItem
        android:id="@+id/behavioralCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/structuralCategory"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:description="@string/category_behavioral_description"
        app:title="@string/category_behavioral_title" />

</RelativeLayout>
